test/valid/builtins/map.js
var a = [1,2,3];
var n = a.map(function (x) { return x; });
var b = a.map(function (x) { return 'bla'; });
a;

n;



